fixed spacing on doc page

--- a/css/acrcd.css
+++ b/css/acrcd.css
@@ -398,7 +398,7 @@ iframe {
          font-style:italic;
          }
          .container > p{
-            margin-top: 5em;
+            margin-top: 1em;
          }
          details > summary {
          padding: 4px;
